mystyle.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&family=Noto+Sans+KR&family=Noto+Sans+JP&family=Noto+Sans+SC&family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap');

body{
    text-align:left;
    font-family:"Noto Sans", "Noto Sans SC", "Noto Sans JP", "Noto Sans KR", Calibri, verdana, "Lucida Sans", sans-serif;
    font-size:0.875rem;
    line-height: 1.5;
}

h1{
  margin-top: 0rem;
  margin-bottom: 0.313rem;
}

h2{
  margin-top: 0.938rem;
  margin-bottom: 0.625rem;
}

h3{
  margin-top: 0.625rem;
  margin-bottom: 0.625rem;
}

p{
  margin-top: 0.125rem;
  margin-bottom: 0.438rem;
}

ul{
  margin-top: 0rem;
  margin-bottom: 0.438rem;
  padding-bottom: 0rem;
}

.wide{
  margin: 0.313rem 0;
}

img{
    border:0;
}

.date_range{
    text-align:left;
    vertical-align:top;
    border-style:white-space;
    min-width:5rem;
}

.flag{
    border:0.063rem solid rgb(230,230,230);
    max-height:0.938rem;
    max-width:1.438rem;
}

a{
    color:DarkBlue;
    text-decoration: none;
}


td{
    padding-bottom:0.188rem;
}

figure {
    display: inline-block;
    margin: 1.25rem;
    text-align: center;
    vertical-align: top;
}
figure img {
    vertical-align: top;
    max-height:15.625rem;
    max-width:100%;
}
figure figcaption {
    text-align: center;
    font-size: 0.88rem;
}

#container{
    max-width: 80rem;
    margin-left:auto;
    margin-right:auto;
    padding:0rem;
    border:1%;
    border-style:solid;
    border-color:rgb(129,190,247);
}

#menu{
    background-color:rgb(129,190,247);
    text-align:left;
    font-family:"Noto Sans", "Noto Sans SC", Calibri, verdana, "Lucida Sans", sans-serif;
    color:white;
    padding:2%;
    padding-bottom:0.5%;
    font-size:1.3rem;
    font-weight:bold;
}

#menu a:link {color:white;}
#menu a:visited {color:white;}
#menu a:hover {color:white;}
#menu a:active {color:white;}

#header{
    background-color:rgb(129,190,247);
    text-align:left;
    font-family:"Noto Sans", "Noto Sans SC", Calibri, verdana, "Lucida Sans", sans-serif;
    color:white;
    padding:2%;
    padding-bottom:1%;
    font-size:1.5rem;
    font-weight:bold;
} 

#header-bath{
    background-color:rgb(129,190,247);
    text-align:left;
    font-family:"Noto Sans", "Noto Sans SC", Calibri, verdana, "Lucida Sans", sans-serif;
    color:white;
    padding:2%;
    padding-bottom:1%;
    font-size:1.5rem;
    font-weight:bold;
} 

#content{
    display:block;
    background-color:white;
    padding:2%;
    color:black;
    border-top:0rem;
    border-bottom:0rem;
    border-right:0rem;
    border-left:0rem;
    border-style:solid;
    border-color:rgb(129,190,247);
}

#footer{
    background-color:rgb(129,190,247);
    text-align:center;
    clear:both;
}

.talk_description{
    padding-left:2%;
    padding-right:0%;
    margin-bottom:0.75rem;
    padding-top:0rem;
    margin-top:0.125rem;
    text-align:justify;
    text-justify:inter-word;
}

@media (min-width: 1024px) {
    html {
        font-size: 16px;
    }
    .main_photo{
    	width:30%;
    }
    #header{
    	font-size:1.8em;
    }
    #header-bath{
    	font-size:1.8em;
    }
}

@media (min-width: 480px) and (max-width: 1023px) {
    html {
        font-size: 15px;
    }
    .main_photo{
    	width:40%;
    }
}
 
@media (max-width: 479px) {
    html {
        font-size: 14px;
    }
    .main_photo{
    	width:50%;
    }
    #header{
    	font-size:1.2em;
    }
    #header-bath{
    	font-size:1.2em;
    }
    #menu{
    	font-size:1.1em;
    }
}

